<resources>
    <string name="app_name">Swasthya</string>
    <string name="LOGO">SWASTHYA</string>
    <string name="dummyShortText">Travel delhi like never before. Although there are shaded areas in the complex but it is always good to carry sunscreen or sunglasses especially during summer.</string>
    <string name="terms_text">By signing up you agree to our Terms of Use, Privacy Policy and Rules.</string>
    <string name="privacy">Before signing in make sure you agree to our Terms and Conditions and Privacy Policy.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daily_tips">1. उन चीजो को ना करे जिन्हें आप करना पसंद ही नही करते. ज़िन्दगी बदलती है और आपको भी बदलते रहना है. यदि आप कोई काम अब और नही करना चाहते तो उसे करना छोड़ दीजिये. (भले ही ऐसा करने में थोडा समय लग सकता है.)

\n\n2. एक समय में एक ही काम करे. ऐसा करते समय आपको अच्छा परिणाम मिलेगा और आप अच्छा महसुस करोगे और कम दुःखी होंगे.

3. हर रविवार को कम से कम 10 से 15 मिनट पुरे सप्ताह की प्लानिंग करने में बिताये. उस समय में अपने पुरे सप्ताह के प्लान के बारे में लिखे, अपनी टू-डू-लिस्ट को देखकर उस हिसाब से तैयारी करे. इससे आप अपने कामो को पूर्णता से कर सकते हो, ऐसा करने से आप अपने सारे काम बिना किसी चिंता के आराम से कर सकोगे.
\n\n
4. सभी खाद्य सामग्री की शॉपिंग सप्ताह में एक ही बार करे. इससे आप अपना समय, ऊर्जा और पैसे भी बचा सकते हो.
\n\n
5. जब आप दुःखी हो, किसी समस्या में हो या अपने भुत-भविष्य की चिंता कर रहे हो तो बैली (Belly) से 2 मिनट तक लंबी साँस ले और जो हवा अंदर-बाहर हो रही है केवल उसी पर ध्यान दे. इससे आपका शरीर शांत रहेगा और आपके दिमाग को दोबारा वर्तमान पल में लायेगा.
\n\n
6. चीजो को पूर्णता से करने को कोशिश न करे. आप चीजो को अच्छी तरह से कर सकते हो और जब अच्छी तरह से कर सकते हो तब आपको जरूर करते रहना चाहिये. चीजे जिन रास्तो में पूरी होती है उन्ही वही पूरा होने दे, उनका रास्ता बदलकर पूर्णता से करने की कोशिश न करे.
\n\n
7. दिन में एक बार सभी की जाँच करे. मैं अपने ईमेल इनबॉक्स, ब्लॉग स्टॅटिस्टिक, ऑनलाइन अर्निंग, ट्विटर और फेसबुक को दिन में सिर्फ एक ही बार देखता हु. मेरे कार्य समय के खत्म होते ही हम इन सभी को देखता हु क्योकि मैं कभी अपनी ऊर्जा और ध्यान को व्यर्थ नही गवाता.
\n\n
8. रोज़ छोटे दयालुता भरे एक्ट का चुनाव करे. आलोचना भरे कामो को रकने से अच्छा दयालुता भरे एक्ट में अभिनय करे.
\n\n
9. उन चीजो को फेंक दे जिनका पिछले 1 साल से आपने उपयोग न किया हो. जो चीजे आपके पास है उन्ही के बल पर आगे बढे और अपनेआप से पूछे की क्या पिछले साल उन चीजो का उपयोग किया था. यदि नही तो उन्हें किसी और को या फिर अपने दोस्त को दे दे या फेंक दे.
\n\n
10. रोज़ अपनेआप से एक सरल प्रश्न पूछे. प्रश्न जैसे की, “अभी कौनसी महत्वपूर्ण चीज है जो मै कर सकता हु?” और “परिस्थिति को सरल बनाने के लिये कौनसा छोटा कदम मुझे लेना चाहिये?”.
\n\n
11. चीजो को उन्ही के जगह पर रहने दे. यदि सबकुछ अपनी वास्तविक जगह पर ही रहे तो काम होने पर आपको वो आसानी से मिल जायेंगी.
\n\n
12. उन चीजो के सब्सक्रिप्शन को बंद कर दे जिसे आप बहोत कम पढ़ते या देखते हो.
\n\n
13. छोटे ईमेल लिखे. साधारणतः मैं कम वाक्यो वाले, अक्सर 1 से 5 वाक्यो के ही ईमेल लिखता हु. लेकिन यदि आप छोटे से छोटा ईमेल लिखो तो आप आसानी से बड़ी से बड़ी परिस्थिति को छोटे शब्दों में बयाँ कर सकते हो.
\n\n
14. अनुमान लगाने की बजाये पूछे. दिमाग को पढ़ना काफी मुश्किल है. इसीलिये अंदाज़ा लगाने की बजाये पूछे और बातचीत करे. इससे आप ग़लतफ़हमी, मुश्किलो और नकारात्मकता और समय के व्यर्थ होने से बच सकते हो.
\n\n
15. छोटे से छोटे कार्यस्थल का उपयोग करे. मेरा कार्यस्थल केवल एक लैपटॉप है जो एक छोटे से लकड़ी के टेबल पर रखा हुआ है. जिसपर पीछे की तरफ पानी का गिलास भी रखा होता है. मेरे कार्यस्थल पर मैं, कंप्यूटर और केवल पानी ही होता है.
\n\n
16. सभी को खुश करना बंद करे. क्योकि हम सभी की ज़िन्दगी में ऐसे कुछ लोग जरूर होते है जिन्हें साथ लेकर हम कभी आगे नही बढ़ सकते इसीलिये सभी को खुश करने की कोशिश न करे.</string>
    <string name="_20">स्वस्थ रहने के 20 सूत्र</string>
    <string name="_30">\u00a9 Swasthya</string>
    <string name="_5_min_read_by_surbhi_chaursayia"><u>5 min read | By Team Swasthya</u></string>
    <string name="tips">" गुणकारी टिप्स "</string>
    <string name="title_a"> 5 टिप्स सेहत के लिए </string>
    <string name="title_b"> स्वस्थ रहने की 10 अच्छी आदतें </string>
    <string name="title_c"> सुपर फूड्स </string>
    <string name="title_d"> लम्‍बा होना है? तो करिए ये योगासन </string>
    <string name="title_e"> स्वस्थ रहने के नौ टिप्स </string>
    <string name="title_f"> स्वस्थ रहने के 20 सूत्र </string>
    <string name="title_g"> फिट रहना है तो अपनाएं ये छोटे-छोट टिप्‍स </string>
    <string name="heading_a">भारतीय संस्कृति में जीने के कुछ ऐसे तौर-तरीके हैं जिनका हम कई पीढ़ियों से पालन करते आ रहे हैं, जैसे – उपवास करना, उठने और बैठने के ढंग, और पानी भरकर रखने के लिए तांबे के बर्तनों का प्रयोग !</string>
    <string name="heading_b">heading B</string>
    <string name="heading_c">सर्दियों का मौसम आते ही जहां एक ओर मन में उल्‍लास भर उठता है, वहीं दूसरी ओर स्‍वास्‍थ्‍य की दृष्टि से ये मौसम कई बार खतरनाक भी साबित होता है। सर्दियों के मौसम में कई तरह की परेशानियां आती हैं। लेकिन हमारी प्रकृति ने इन समस्याओं से लड़ने के लिए कई चीजें दी हैं, जिनकी मदद से आप सर्दियों में आने वाली समस्‍याओं से बच सकते हैं। ऑरीफ्लेम इंडिया की आहार विशेषज्ञ सोनिया नारंग के मुताबिक, सर्दियों की समस्याओं से निपटने के लिए कुछ सुपरफूड्स बेहद मददगार हो सकते हैं !</string>
    <string name="heading_d">योग में भला क्‍या असंभव है। अगर आप मोटे हैं और पतला होना चाहते हैं, तो संभव है। अगर आप तनाव मुक्‍त होना चाहते हैं, तो ये भी संभव है और अगर आप लम्‍बे होना चाहते हैं, ये भी संभव है। जी हां, अब आप अपनी लम्‍बाई बढ़ाने के लिए अपना सकते हैं योग का रास्‍ता। करना क्‍या है ये हम आपको बताते हैं।
खड़े होकर किया जाने वाला ताड़ासन लम्‍बाई बढ़ाने में मदद करता है और तो और ये असान भी बहुत है। इसे बड़ी ही आसानी से किसी भी उम्र में किया जा सकता है।</string>
    <string name="heading_e">heading e</string>
    <string name="heading_f">दिनचर्या में थोड़ा-सा व आसान परिवर्तन आपको स्वस्थ व दीर्घायु बना सकता है। बशर्ते आप कुछ चीजों को जीवनभर के लिए अपना लें और कुछ त्याज्य चीजों को हमेशा के लिए दूर कर दें। इसके लिए अपनाइए सरल-सा 20 सूत्री जीवन। </string>
    <string name="heading_g">दHeading g</string>
    <string name="desc_a">\n<b>1. योगिक विज्ञान में कुछ ऐसे सरल उपाय हैं सेहत और स्वस्थ के लिए उत्तम हैं। जैसे : उपवास करना, उठने और बैठने के ढंग, और पानी भरकर रखने के लिए
        तांबे के बर्तनों का प्रयोग इस ब्लॉग में पढ़ते हैं ऐसे ही कुछ तरीकों के पीछे छुप्पे विज्ञान के बारे में।</b>
        \n\n<b><font color="#E98E08">1. तांबे के बर्तन का पानी पीयें</font></b>\n\n
अगर आप पानी को रात भर या कम से कम चार घंटे तक तांबे के बर्तन में रखें तो यह तांबे के कुछ गुण अपने में समा लेता है।
ताम्बे के बर्तन से पानी पीएं. यह पानी खास तौर पर आपके लीवर के लिए और आम तौर पर आपकी सेहत और शक्ति-स्फूर्ति के लिए उत्तम होता है। अगर पानी बड़ी तेजी के
        साथ पंप हो कर अनगिनत मोड़ों के चक्कर लगाकर लोहे या प्लास्टिक की पाइप के सहारे आपके घर तक पहुंचता है तो इन सब मोड़ों से रगड़ाते टकराते गुजरने के कारण
        उसमें काफ़ी दोष आ जाता है। लेकिन पानी में याद्दाश्त के साथ साथ अपने मूल रूप में वापस पहुंच पाने की शक्ति भी होती है। अगर आप नल के इस पानी को एक घंटे
        तक बिना हिलाये-डुलाये रख देते हैं तो दोष अपने आप खत्म हो जाता है।
        \n\n\n<b><font color="#E98E08">2. शरीर को नींद नहीं, आराम दें</font></b>\n\n\n
आप सोने किस वक्त जाते हैं, यह तो आपके लाइफ स्टाइल पर निर्भर करता है, लेकिन महत्व इस बात का है कि आपको कितने घंटे की नींद की जरूरत है। अकसर कहा जाता है कि दिन में आठ घंटे की नींद लेनी ही चाहिए।
        आपके शरीर को जिस चीज की जरूरत है, वह नींद नहीं है, वह आराम है। अगर आप पूरे दिन अपने शरीर को आराम दें, अगर आपका काम, आपकी एक्सरसाइज सब कुछ आपके लिए एक आराम की तरह हैं
        तो अपने आप ही आपकी नींद के घंटे कम हो जाएंगे। लोग हर चीज तनाव में करना चाहते हैं। मैंने देखा है कि लोग पार्क में टहलते वक्त भी तनाव में होते हैं। अब इस तरह का व्यायाम तो आपको फायदे
        की बजाय नुकसान ही करेगा, क्योंकि आप हर चीज को इस तरह से ले रहे हैं जैसे कोई जंग लड़ रहे हों। आप आराम के साथ क्यों नहीं टहलते? चाहे टहलना हो या जॉगिंग, उसे पूरी मस्ती और आराम
        के साथ क्यों नहीं कर सकते?
        \n\n\n<b><font color="#E98E08">3. दो हफ्ते में एक बार उपवास करें</font></b>\n\n
आप शरीर के प्राकृतिक चक्र से जुड़ा ‘मंडल’ नाम की एक चीज होती है। मंडल का मतलब है कि हर 40 से 48 दिनों में शरीर एक खास चक्र से गुजरता है।
हर चक्र में तीन दिन ऐसे होते हैं जिनमें आपके शरीर को भोजन की आवश्यकता नहीं होती। अगर आप अपने शरीर को लेकर सजग हो जाएंगे तो आपको खुद भी इस बात का अहसास
        हो जाएगा कि इन दिनों में शरीर को भोजन की जरूरत नहीं होती। इनमें से किसी भी एक दिन आप बिना भोजन के आराम से रह सकते हैं।
11 से 14 दिनों में एक दिन ऐसा भी आता है, जब आपका कुछ भी खाने का मन नहीं करेगा। उस दिन आपको नहीं खाना चाहिए। आपको यह जानकार हैरानी होगी कि कुत्ते और बिल्लियों
        के अंदर भी इतनी सजगता होती है। कभी गौर से देखें,बस इस समस्या के समाधान के लिए अपने यहां एकादशी का दिन तय कर दिया गया। हिंदी महीनों के हिसाब से देखें तो हर 14 दिनों
        में एक बार एकादशी आती है।
        \n\n\n<b><font color="#E98E08">4. पीठ को सीधा रखकर बैठें</font></b>\n\n
शरीर के भीतरी अंगों के आराम में होने का खास महत्व है। इसके कई पहलू हैं। फिलहाल हम इसके सिर्फ एक पहलू पर विचार कर रहे हैं। शरीर के ज्यादातर महत्वपूर्ण भीतरी अंग छाती और पेट के
        हिस्से में होते हैं। ये सारे अंग न तो सख्त या कड़े होते हैं और न ही ये नट या बोल्ट से किसी एक जगह पर स्थिर किए गए हैं। ये सारे अंग ढीले-ढाले और एक जाली के अंदर झूल
        रहे से होते हैं। इन अंगों को सबसे ज्यादा आराम तभी मिल सकता है, जब आप अपनी रीढ़ को सीधा रखकर बैठने की आदत डालें।
पीठ को सीधा रखें
आधुनिक विचारों के मुताबिक, आराम का मतलब पीछे टेक लगाकर या झुककर बैठना होता है। लेकिन इस तरह बैठने से शरीर के अंगों को कभी आराम नहीं मिल पाता।
शरीर को सीधा रखने का मतलब यह कतई नहीं है कि हमें आराम पसंद नहीं है, इसलिए यह जरूरी है कि हम अपने शरीर को इस तरह तैयार करें कि रीढ़ को सीधा रखते हुए
        हमारे शरीर का ढांचा और स्नायुतंत्र आराम की स्थिति में बने रहें।
</string>
</resources>